# nela

./: .gitignore  README.md  process-manager-optimization-requirements.md
genhat-desktop/src-tauri/: Cargo.toml  RAPTOR.md  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  test_compat.rs  test_req.rs
genhat-desktop/src-tauri/icons/: icon.icns
genhat-desktop/src-tauri/nsis/: preinstall.nsh
genhat-desktop/src-tauri/src/: lib.rs  main.rs  paths.rs  windows_spawn.rs  workspace.rs
genhat-desktop/src-tauri/src/asr/: inference.rs  mod.rs
genhat-desktop/src-tauri/src/backends/: cross_encoder.rs  kitten_tts.rs  llama_cli.rs  llama_server.rs  mod.rs  onnx_classifier.rs  parakeet.rs  tts_inference.rs  whisper_cpp.rs
genhat-desktop/src-tauri/src/commands/: audio.rs  download.rs  inference.rs  mod.rs  models.rs  playground.rs  podcast.rs  rag.rs  system.rs  workspace.rs
genhat-desktop/src-tauri/src/config/: mod.rs  models.toml
genhat-desktop/src-tauri/src/playground/: executor.rs  mod.rs  nodes.rs  scheduler.rs  store.rs  types.rs
genhat-desktop/src-tauri/src/podcast/: engine.rs  script.rs  types.rs
genhat-desktop/src-tauri/src/process/: lifecycle.rs  mod.rs  pool.rs
genhat-desktop/src-tauri/src/rag/: chunker.rs  db.rs  fusion.rs  mod.rs  pipeline.rs  raptor.rs  raptor_examples.rs  search.rs  vecindex.rs
genhat-desktop/src-tauri/src/registry/: custom.rs  mod.rs  types.rs
genhat-desktop/src-tauri/src/router/: mod.rs  tasks.rs
genhat-desktop/src-tauri/src/system/: mod.rs
genhat-desktop/src-tauri/src/tts/: inference.rs  mod.rs  phonemizer.rs  (+4 more)
(+115 files in other folders)
